Added fix for when there are other players in the chunk.

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -2,6 +2,8 @@ noPermission: "&c&lSorry&7, you don't have permission for this."
 
 mustBeNumber: "&c&lSorry&7, you must specify the amount to give!"
 
+playersInChunk: "&c&lSorry&7, there appear to be other players in this chunk!"
+
 cannotBuildHere: "&c&lSorry&7, you can't use a Chunk Buster here."
 
 gaveChunkBusters: "&7You've given &c%amount%x &5&l[ &e&lCHUNK BUSTER &5&l] &7to &c%player%&7."
